# Ainalyzer

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dialogs.rs  engine.rs  engine_commands.rs  goban.rs  history.rs  main.rs  selectors.rs  winrate_plot.rs
