[package]
name = "ainalyzer"
version = "0.1.0"
authors = ["arttaaz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
scrub_log = "0.2.1"
druid = { git = "https://github.com/linebender/druid.git" }
libgtp = { git = "https://github.com/arttaaz/libgtp.git" }
sgf-parser = "2.6"
petgraph = "0.6.0"
rust-fsm = "0.5.0"
lazy_static = "1.4.0"
format_num = "0.1.0"
