[package]
name = "ainalyzer"
version = "0.1.0"
authors = ["arttaaz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
scrub_log = "0.2.1"
iced = {version = "0.8", features = ["tokio", "canvas", "svg"] }
iced_native = "0.9"
libgtp = { path = "../libgtp" }
#libgtp = "0.1.2"
sgf-parser = "2.6"
petgraph = "0.6.0"
rust-fsm = "0.6.0"
lazy_static = "1.4.0"
format_num = "0.1.0"
native-dialog = "0.6.3"
charts-rs = "0.3.3"
